--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -34,6 +33,7 @@
 
             </LinearLayout>
         </com.google.android.material.appbar.CollapsingToolbarLayout>
+        <!--
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:layout_width="match_parent"
             android:id="@+id/bottomNavView"
@@ -47,31 +47,32 @@
             android:outlineAmbientShadowColor="@android:color/transparent"
             android:outlineSpotShadowColor="@android:color/transparent"
             app:menu="@menu/bottom_navigation_menu"/>
+            -->
 
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <!--
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-            -->
-
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/fragmentContainerView"
-            android:name="com.example.musicplayer.AllSongsFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:orientation="vertical">
+          <com.google.android.material.tabs.TabLayout
+              android:layout_width="match_parent"
+              android:layout_height="?attr/actionBarSize"
+              android:id="@+id/tabLayout"
+              app:tabBackground="@color/blue_100"
+              app:tabIconTint="@color/black_100"
+              app:tabSelectedTextColor="@color/black_100"/>
+          <androidx.viewpager.widget.ViewPager
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:id="@+id/viewPager"/>
+      </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
 
