--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="splash_bgm">#FFB80707</color>
+    <color name="blue_100">#439DE5</color>
+    <color name="black_100">#000</color>
 </resources>
